# conway_gen_ai

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml  run_service.py  run_streamlit_ui.py
chatbot_interface/: .dockerignore  Dockerfile  chatbot.py  chatbot_tools.py  streamlit_app.py
chatbot_interface/db/: db_service.py  db_tables.py
service/: .dockerignore  Dockerfile  cgol_engine.py  data_model.py  router.py
service/cpp_engine/: cgol_engine.cpp  picosha2.h
service/db/: db_service.py  db_tables.py
