[project]
name = "conway-gen-ai"
version = "0.1.0"
description = "Conway Game Of Life GenAI applciation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.116.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langmem>=0.0.29",
    "matplotlib>=3.10.5",
    "openai>=1.99.5",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "streamlit>=1.48.0",
    "uvicorn>=0.35.0",
]
